--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
  
   bottom_navy_bar: ^6.1.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
